# 5_ESP32P4C6_HMI_7inch

./: .gitignore  README.md  idf_env.cmd  idf_env.ps1  sdkconfig.defaults  sdkconfig.old
docs/: esp-idf-terminal.md
main/: CMakeLists.txt  main.c  main_minimal_screen_backup.c  main_uart_raw_backup.c
